[project]
name = "medium-blog-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.11",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
]
